Archive2/b0/35ccc70f747609/output
main.cpp:6:10: error: declaration of 'class T'
 template<typename T = int> class A {
          ^
main.cpp:5:10: error:  shadows template parm 'class T'
 template<typename T = int>
          ^
main.cpp:6:34: error: too many template-parameter-lists
 template<typename T = int> class A {
                                  ^
